tests/valid/replace/replace_then_use_new.facet
fn f(mut x: unrestricted isize) -> unrestricted isize {
    let _: unrestricted isize = (replace x 42);
    x
}
