tests/invalid/linear_affine_error/affine_to_unrestricted_binding.facet
fn f(x: affine isize) -> unrestricted isize {
  let y: unrestricted isize = x;
  y
}
